--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   
 
   <!-- Custom Styles -->
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="https://static.staticsave.com/jerrycalculator/style.css">
   <style>
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@300&display=swap');
 </style>
